--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=80
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=mysql:jdbc://localhost:3306/mymeetingcinema?serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://localhost:3306/mymeetingcinema?serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=123456
